src/objects/PPITableDataSet__c.object
<CustomObject>
    <description>A junction object that links a Survey Version to a PPI Table. This allows for a m-m relationship between these two objects so that a PPI Table can be referenced by a Survey Version as opposed to needing to be copied. All fields on this object are deprecated and moved to PPI Table except for Survey Version and PPI Table. Survey is kept here as it cannot be moved. It is not needed any more</description>
    <fields>
        <fullName>Alpha__c</fullName>
        <label>Alpha</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpenditureDefinition__c</fullName>
        <label>Expenditure Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identifier__c</fullName>
        <label>Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineDefinition__c</fullName>
        <label>Line Definition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPITable__c</fullName>
        <label>PPI Table</label>
        <referenceTo>PPITable__c</referenceTo>
        <relationshipLabel>PPI Table Data Sets</relationshipLabel>
        <relationshipName>PPI_Table_Data_Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PPP__c</fullName>
        <label>PPP</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PovertyRate__c</fullName>
        <label>Poverty Rate</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ReportLegend__c</fullName>
        <description>Legend to show in the reports. It shows &quot;Survey Title - Lookup Table Name&quot;</description>
        <formula>Survey__r.Name &amp; &apos; - &apos; &amp; PPITable__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Report Legend</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <description>The Survey that this Data Set links to. Not really needed but as we cannot remove fields from a package yet this is kept. When allowed will be removed and only the Survey Version will be used. Do not reference to this field in any code</description>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>PPI Table Data Sets</relationshipLabel>
        <relationshipName>PPI_Table_Data_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SurveyVersion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Survey Version that this junction object is for</description>
        <label>Survey Version</label>
        <referenceTo>SurveyVersion__c</referenceTo>
        <relationshipLabel>Survey Version</relationshipLabel>
        <relationshipName>Survey_Version</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>PPI Table Data Set</label>
    <nameField>
        <displayFormat>PTDS-{00000000}</displayFormat>
        <label>PPI Table Data Set Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PPI Table Data Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>